# Rust_Inventory_managment_system

./: Cargo.toml  README.md  auth.rs  libs.rs  login.rs  main.rs  register.rs
.github/workflows/: Cargo.toml  README.md  libs.rs  main.rs
