[package]
name = "rust_inventory_managment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"

[dependencies]
time ="0.3.36"
bcrypt = "0.15.1"
rand = "0.8"
secrecy = "0.8.0"

